deploy: 44c173e92f0ab0d5e9589e845f3bce5ff38a481c

--- a/ch03/note01.html
+++ b/ch03/note01.html
@@ -821,16 +821,20 @@ H(x,p) = K + V = \frac{p^2}{2m} + V(x)
 </ul>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
-<p>Start by applying linear momentum operator to first function</p>
+<p>Start by applying linear momentum operator to first function:</p>
 <div class="math notranslate nohighlight">
 \[-i \hbar \dfrac{\partial}{\partial x} A \sin(ax) = -i \hbar Aa \cos(ax) \nonumber\]</div>
-<p>We see that action of operator changed the sin wave function hence sin function can not be an eigenfunction of linear momentum.</p>
-<p>Next we apply kinetic energy operator</p>
+<ul class="simple">
+<li><p>We see that action of operator changed the <span class="math notranslate nohighlight">\(sin\)</span> function hence sin function can not be an eigenfunction of linear momentum.</p></li>
+</ul>
+<p>Next we apply kinetic energy operator:</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{align*} -\dfrac{\hbar^2}{2m} \dfrac{\partial^2}{\partial x^2} A \sin(ax) &amp;= -\dfrac{\hbar^2}{2m} \dfrac{\partial}{\partial x} Aa \cos(ax) \\[4pt] &amp;= +\dfrac{\hbar^2}{2m} Aa^2 \sin(ax) \end{align*}  \nonumber
 \end{split}\]</div>
-<p>Kinetic energy operator did not modify the function hence sin function is an eigenfunction for kinetic energy operator</p>
+<ul class="simple">
+<li><p>Kinetic energy operator did not modify the function hence s<span class="math notranslate nohighlight">\(sin\)</span> function is an eigenfunction for kinetic energy operator</p></li>
+</ul>
 </div>
 </section>
 <section id="problem-2-taking-the-square-of-an-operator">
@@ -838,22 +842,26 @@ H(x,p) = K + V = \frac{p^2}{2m} + V(x)
 <p>Consider the operator <span class="math notranslate nohighlight">\( \hat{A} = x \frac{d}{dx} \)</span>. Find <span class="math notranslate nohighlight">\( \hat{A}^2 \)</span>, i.e., <span class="math notranslate nohighlight">\( \hat{A}(\hat{A}f(x)) \)</span>, and apply it to an arbitrary function <span class="math notranslate nohighlight">\( f(x) \)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
-<p>First, apply <span class="math notranslate nohighlight">\( \hat{A} f(x) = x \frac{d}{dx} f(x) \)</span>:
-<span class="math notranslate nohighlight">\(
+<p>First, apply <span class="math notranslate nohighlight">\( \hat{A} f(x) = x \frac{d}{dx} f(x) \)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{A} f(x) = x \frac{df}{dx}
-\)</span>
-Now, apply <span class="math notranslate nohighlight">\( \hat{A} \)</span> again to the result:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Now, apply <span class="math notranslate nohighlight">\( \hat{A} \)</span> again to the result:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{A}(\hat{A} f(x)) = \hat{A} \left( x \frac{df}{dx} \right) = x \frac{d}{dx} \left( x \frac{df}{dx} \right)
-\)</span>
-Using the product rule:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Using the product rule:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{d}{dx} \left( x \frac{df}{dx} \right) = \frac{df}{dx} + x \frac{d^2 f}{dx^2}
-\)</span>
-Thus:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Thus:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{A}^2 f(x) = x \left( \frac{df}{dx} + x \frac{d^2 f}{dx^2} \right) = x \frac{df}{dx} + x^2 \frac{d^2 f}{dx^2}
-\)</span></p>
+\]</div>
 </div>
 </section>
 <section id="problem-3-verifying-eigenfunction-and-eigenvalue">
@@ -861,19 +869,22 @@ Thus:
 <p>Consider the operator <span class="math notranslate nohighlight">\( \hat{B} = -i\hbar \frac{d}{dx} \)</span> (momentum operator). Verify that <span class="math notranslate nohighlight">\( f(x) = e^{ikx} \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{B} \)</span>, and find the corresponding eigenvalue.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
-<p>Apply <span class="math notranslate nohighlight">\( \hat{B} \)</span> to <span class="math notranslate nohighlight">\( f(x) = e^{ikx} \)</span>:
-<span class="math notranslate nohighlight">\(
+<p>Apply <span class="math notranslate nohighlight">\( \hat{B} \)</span> to <span class="math notranslate nohighlight">\( f(x) = e^{ikx} \)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{B} f(x) = -i\hbar \frac{d}{dx} e^{ikx}
-\)</span>
-The derivative of <span class="math notranslate nohighlight">\( e^{ikx} \)</span> is:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>The derivative of <span class="math notranslate nohighlight">\( e^{ikx} \)</span> is:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{d}{dx} e^{ikx} = ik e^{ikx}
-\)</span>
-Thus:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Thus:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{B} f(x) = -i\hbar \cdot ik e^{ikx} = \hbar k e^{ikx}
-\)</span>
-Since <span class="math notranslate nohighlight">\( \hat{B} f(x) = \hbar k f(x) \)</span>, <span class="math notranslate nohighlight">\( f(x) = e^{ikx} \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{B} \)</span> with eigenvalue <span class="math notranslate nohighlight">\( \hbar k \)</span>.</p>
+\]</div>
+<p>Since <span class="math notranslate nohighlight">\( \hat{B} f(x) = \hbar k f(x) \)</span>, <span class="math notranslate nohighlight">\( f(x) = e^{ikx} \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{B} \)</span> with eigenvalue <span class="math notranslate nohighlight">\( \hbar k \)</span>.</p>
 </div>
 </section>
 <section id="problem-4-testing-for-an-eigenfunction-and-eigenvalue">
@@ -881,19 +892,22 @@ Since <span class="math notranslate nohighlight">\( \hat{B} f(x) = \hbar k f(x) 
 <p>Given the operator <span class="math notranslate nohighlight">\( \hat{C} = \frac{d^2}{dx^2} \)</span> (second derivative operator), check if <span class="math notranslate nohighlight">\( f(x) = e^{-\alpha x^2} \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{C} \)</span>, and find the eigenvalue if it is.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
-<p>Apply <span class="math notranslate nohighlight">\( \hat{C} = \frac{d^2}{dx^2} \)</span> to <span class="math notranslate nohighlight">\( f(x) = e^{-\alpha x^2} \)</span>:
-<span class="math notranslate nohighlight">\(
+<p>Apply <span class="math notranslate nohighlight">\(\hat{C} = \frac{d^2}{dx^2} \)</span> to <span class="math notranslate nohighlight">\( f(x) = e^{-\alpha x^2} \)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{d}{dx} e^{-\alpha x^2} = -2\alpha x e^{-\alpha x^2}
-\)</span>
-Taking the second derivative:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Taking the second derivative:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{d^2}{dx^2} e^{-\alpha x^2} = \frac{d}{dx} \left( -2\alpha x e^{-\alpha x^2} \right) = -2\alpha e^{-\alpha x^2} + 4\alpha^2 x^2 e^{-\alpha x^2}
-\)</span>
-Thus:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>Thus:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{C} f(x) = \left( -2\alpha + 4\alpha^2 x^2 \right) e^{-\alpha x^2}
-\)</span>
-Since this is not proportional to <span class="math notranslate nohighlight">\( f(x) = e^{-\alpha x^2} \)</span>, <span class="math notranslate nohighlight">\( f(x) \)</span> is <strong>not</strong> an eigenfunction of <span class="math notranslate nohighlight">\( \hat{C} \)</span>.</p>
+\]</div>
+<p>Since this is not proportional to <span class="math notranslate nohighlight">\( f(x) = e^{-\alpha x^2} \)</span>, <span class="math notranslate nohighlight">\( f(x) \)</span> is <strong>not</strong> an eigenfunction of <span class="math notranslate nohighlight">\( \hat{C} \)</span>.</p>
 </div>
 </section>
 <section id="problem-5-linearity-and-eigenfunction-testing">
@@ -901,16 +915,18 @@ Since this is not proportional to <span class="math notranslate nohighlight">\( 
 <p>Consider the operator <span class="math notranslate nohighlight">\( \hat{D} = x^2 \frac{d}{dx} \)</span>. Show whether this operator is linear and check if <span class="math notranslate nohighlight">\( f(x) = x^n \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{D} \)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
-<p>First, test linearity by applying <span class="math notranslate nohighlight">\( \hat{D} \)</span> to <span class="math notranslate nohighlight">\( \alpha f(x) + \beta g(x) \)</span>:
-<span class="math notranslate nohighlight">\(
+<p>First, test linearity by applying <span class="math notranslate nohighlight">\( \hat{D} \)</span> to <span class="math notranslate nohighlight">\( \alpha f(x) + \beta g(x) \)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{D}(\alpha f(x) + \beta g(x)) = x^2 \frac{d}{dx} (\alpha f(x) + \beta g(x)) = \alpha x^2 \frac{df}{dx} + \beta x^2 \frac{dg}{dx}
-\)</span>
-This is <span class="math notranslate nohighlight">\( \alpha \hat{D} f(x) + \beta \hat{D} g(x) \)</span>, so <span class="math notranslate nohighlight">\( \hat{D} \)</span> is linear.</p>
-<p>Now, apply <span class="math notranslate nohighlight">\( \hat{D} \)</span> to <span class="math notranslate nohighlight">\( f(x) = x^n \)</span>:
-<span class="math notranslate nohighlight">\(
+\]</div>
+<p>This is <span class="math notranslate nohighlight">\( \alpha \hat{D} f(x) + \beta \hat{D} g(x) \)</span>, so <span class="math notranslate nohighlight">\( \hat{D} \)</span> is linear.</p>
+<p>Now, apply <span class="math notranslate nohighlight">\( \hat{D} \)</span> to <span class="math notranslate nohighlight">\( f(x) = x^n \)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 \hat{D} f(x) = x^2 \frac{d}{dx} x^n = x^2 \cdot n x^{n-1} = n x^n
-\)</span>
-Since the result is proportional to <span class="math notranslate nohighlight">\( f(x) = x^n \)</span>, <span class="math notranslate nohighlight">\( f(x) = x^n \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{D} \)</span> with eigenvalue <span class="math notranslate nohighlight">\( n \)</span>.</p>
+\]</div>
+<p>Since the result is proportional to <span class="math notranslate nohighlight">\( f(x) = x^n \)</span>, <span class="math notranslate nohighlight">\( f(x) = x^n \)</span> is an eigenfunction of <span class="math notranslate nohighlight">\( \hat{D} \)</span> with eigenvalue <span class="math notranslate nohighlight">\( n \)</span>.</p>
 </div>
 </section>
 </section>
