deploy: b261f0d969660d19c2e259baf8113245e48abdcd

--- a/ch03/note01.html
+++ b/ch03/note01.html
@@ -538,11 +538,12 @@ document.write(`
 <div class="math notranslate nohighlight">
 \[E=h\nu=\hbar\omega\,\,\,\, where\,\,\,\, \omega=2\pi\nu\]</div>
 </li>
+<li><p><strong>Quantum wave function</strong></p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\Psi(x,t)=Ae^{i(kx-\omega t)}=Ae^{\frac{i}{\hbar}(px-E t)}\]</div>
+\[\Psi(x,t)=Ae^{\frac{i}{\hbar}(px-E t)}\]</div>
 <ul class="simple">
-<li><p><strong>What equation can genereate such wave functions?</strong> To find out we need to take derivatives with respect to time and space.</p></li>
+<li><p><strong>What equation can genereate such quantum wave functions?</strong> To find out we need to take derivatives with respect to time and space.</p></li>
 </ul>
 </section>
 <section id="turning-a-quantum-wave-function-into-a-quantum-wave-equation">
