deploy: cf6fde90671a73731ef034650f3f55f78b84f9ba

--- a/math/note05.html
+++ b/math/note05.html
@@ -813,7 +813,7 @@ D_2 = \frac{1}{h^2}
 <div class="math notranslate nohighlight">
 \[\bf C = AB\]</div>
 <div class="math notranslate nohighlight">
-\[C_ij = \sum_k A_{ik} B_{kj}\]</div>
+\[C_{ij} = \sum_k A_{ik} B_{kj}\]</div>
 </div>
 <ul class="simple">
 <li><p><strong>Powers of matrix</strong> Multiplying same matrix we end up with different powers. E.g second derivative matrix can be obtained by multiplying two first order derivative matrices</p></li>
