deploy: 4fdb0e9c3bd3206bef510a4198235bc9076753c6

--- a/ch03/note04.html
+++ b/ch03/note04.html
@@ -718,10 +718,10 @@ i &amp; 0 \\
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
 <ul class="simple">
-<li><p>For the first matrix we have <span class="math notranslate nohighlight">\(a_{12}=2\neq a^{*}_{21}=3\)</span>, non-Hermitian</p></li>
-<li><p>For the second matrix <span class="math notranslate nohighlight">\(a_{11}\neq a^{*}_{11}=0\)</span>, non-Hermitian</p></li>
-<li><p>For the third matrix  <span class="math notranslate nohighlight">\(a_{12}=-3i =a^{*}_{21} = (3i)^{*}=-3i\)</span>, Hermitian</p></li>
-<li><p>For the fourth matrix  <span class="math notranslate nohighlight">\(a_{12}=2i \neq a^{*}_{21} = (2i)^{*} = -2i\)</span>, Hermitian</p></li>
+<li><p>For the first matrix we have <span class="math notranslate nohighlight">\(a_{12}=2\neq a^{*}_{21}=3\)</span>, <strong>non-Hermitian</strong></p></li>
+<li><p>For the second matrix <span class="math notranslate nohighlight">\(a_{11}\neq a^{*}_{11}=0\)</span>, <strong>non-Hermitian</strong></p></li>
+<li><p>For the third matrix  <span class="math notranslate nohighlight">\(a_{12}=-3i =a^{*}_{21} = (3i)^{*}=-3i\)</span>, <strong>Hermitian</strong></p></li>
+<li><p>For the fourth matrix  <span class="math notranslate nohighlight">\(a_{12}=2i \neq a^{*}_{21} = (2i)^{*} = -2i\)</span>, <strong>non-Hermitian</strong></p></li>
 </ul>
 </div>
 <ul class="simple">
