deploy: 329fa87d569dfd8b7fe3b556dfb58448dbb50fc9

--- a/ch03/note04.html
+++ b/ch03/note04.html
@@ -807,6 +807,10 @@ a = a^*
 \[
 \int_{a}^{b} \psi_1^*(x) \left( x \frac{d}{dx} \psi_2(x) \right) \, dx = \int_{a}^{b} \left( x \frac{d}{dx} \psi_1(x) \right)^* \psi_2(x) \, dx
 \]</div>
+<ul class="simple">
+<li><p>Note how complex conjugation applies to an expression with an operator inside!</p></li>
+<li><p>But since our operator contains no imaginary number complex conjugation only applies to the wavefunction</p></li>
+</ul>
 <div class="note dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
 <p><strong>Step 1: Left-hand side</strong></p>
@@ -821,8 +825,8 @@ a = a^*
 \[
 \int_{a}^{b} \psi_1^*(x) \left( x \frac{d}{dx} \psi_2(x) \right) \, dx = \left[ x \psi_1^*(x) \psi_2(x) \right]_{a}^{b} - \int_{a}^{b} \frac{d}{dx} \left( x \psi_1^*(x) \right) \psi_2(x) \, dx
 \]</div>
-<p>The boundary term ( \left[ x \psi_1^*(x) \psi_2(x) \right]_{a}^{b} ) can be discarded if the wavefunctions vanish at the boundaries (such as in the case of bound states in a box).</p>
-<p>Now, for the remaining integral, we apply the derivative to the product ( x \psi_1^*(x) ):</p>
+<p>The boundary term <span class="math notranslate nohighlight">\(\left[ x \psi_1^*(x) \psi_2(x) \right]_{a}^{b}\)</span> can be discarded if the wavefunctions vanish at the boundaries (such as in the case of bound states in a box).</p>
+<p>Now, for the remaining integral, we apply the derivative to the product <span class="math notranslate nohighlight">\(x \psi_1^*(x)\)</span>:</p>
 <div class="math notranslate nohighlight">
 \[
 \int_{a}^{b} \frac{d}{dx} \left( x \psi_1^*(x) \right) \psi_2(x) \, dx = \int_{a}^{b} \left( \psi_1^*(x) + x \frac{d}{dx} \psi_1^*(x) \right) \psi_2(x) \, dx
