--- a/ch04/note03.html
+++ b/ch04/note03.html
@@ -535,6 +535,11 @@ document.write(`
 <div class="math notranslate nohighlight">
 \[{\hat{H} = -\frac{\hbar^2}{2\mu}\frac{d^2}{dx^2} + \frac{1}{2}kx^2 }\]</div>
 <ul class="simple">
+<li><p>Now the probelm is to solve for eignefunctiona and eigenvalues. Find what values a new quantum number <span class="math notranslate nohighlight">\(v\)</span> takes on. Investigate features of eigenfunctions</p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[\hat{H}\psi_v(x) = E_v \psi_v(x) \]</div>
+<ul class="simple">
 <li><p>Note that the potential term may be expressed in terms of three parameters becasue of <span class="math notranslate nohighlight">\(k=\frac{\mu}{\omega}\)</span> and <span class="math notranslate nohighlight">\(\omega=2\pi \nu\)</span> relations</p></li>
 </ul>
 <table class="table">
