deploy: 458c337a856bf934b38125d8f33d09e9bc6a47ac

--- a/ch04/note04B.html
+++ b/ch04/note04B.html
@@ -604,7 +604,7 @@ $<span class="math notranslate nohighlight">\(
 </ul>
 <div class="math notranslate nohighlight">
 \[{\tilde{\nu_J} = \tilde{E}_r(J + 1) - \tilde{E}_r(J) = \left((J+1)(J+2) - J(J+1)\right)\tilde{B} = 2\tilde{B}(J+1)}\]</div>
-<div class="admonition-spacing-of-adjacent-spectral-lines admonition">
+<div class="important admonition">
 <p class="admonition-title"><strong>Spacing of adjacent spectral lines</strong></p>
 <div class="math notranslate nohighlight">
 \[\tilde{\nu}_{J+1} - \tilde{\nu_J} = 2\tilde{B}\]</div>
