deploy: 00875b2775bb66b1a6726772511cf9d11e849278

--- a/ch04/note04B.html
+++ b/ch04/note04B.html
@@ -585,8 +585,8 @@ $<span class="math notranslate nohighlight">\(
 <li><p>We assume that the molecule is a rigid rotor, which means that the molecular geometry does not change during molecular rotation. We have solved this problem already</p></li>
 <li><p>Energies are typically expressed in wavenumber units (<span class="math notranslate nohighlight">\(cm^{-1}\)</span> although the basic SI unit is <span class="math notranslate nohighlight">\(m^{-1}\)</span>) by dividing <span class="math notranslate nohighlight">\(E\)</span> by <span class="math notranslate nohighlight">\(hc\)</span>. The use of wavenumber units is denoted by including a tilde sign above the variable (e.g., <span class="math notranslate nohighlight">\(\tilde{\nu}\)</span>). The rotational energies expressed in wavenumbers are given by:</p></li>
 </ul>
-<div class="admonition-eigenvalues-of-rotational-states-in-spectroscopic-units admonition">
-<p class="admonition-title"><strong>Eigenvalues of rotational states in spectroscopic units</strong></p>
+<div class="important admonition">
+<p class="admonition-title"><strong>Rotaitonal energies in spectroscopic units</strong></p>
 <div class="math notranslate nohighlight">
 \[{\tilde{E}_r(J) = \frac{E_r}{hc} = \tilde{B} J(J+1)}\]</div>
 </div>
