--- a/ch04/note04B.html
+++ b/ch04/note04B.html
@@ -684,6 +684,11 @@ E_{v,J} = \tilde{\omega}(v+1/2)+\tilde{B}J(J+1)
  {\omega} - 2\tilde{B}J\]</div>
 <ul class="simple">
 <li><p><strong>The Q-branch <span class="math notranslate nohighlight">\(\Delta J =0\)</span></strong> is predicted to be absent because it is forbidden by the selection rule of the rigid rotor model.</p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[\tilde{\nu}_{\Delta J=0}=\tilde
+ {\omega}\]</div>
+<ul class="simple">
 <li><p>The <span class="math notranslate nohighlight">\(J = 0,1,2...\)</span> <strong>always refers to the initial rotational state</strong>. For instane one often writes R(0) and R(1) to represent R branches for <span class="math notranslate nohighlight">\(0\rightarrow1\)</span> and <span class="math notranslate nohighlight">\(1\rightarrow2\)</span> transitions.</p></li>
 </ul>
 </section>
