deploy: 129685f7b905f7fa3e6a3fdc8f420f55e656cb32

--- a/ch04/note04B.html
+++ b/ch04/note04B.html
@@ -663,14 +663,14 @@ K=\frac{I \omega^2}{2}=\frac{L^2}{2I}
 </ul>
 <div class="math notranslate nohighlight">
 \[
-E_{v,J} = \tilde{\omega}(v+1/2)+\tilde{B}J(J+1)
+\tilde{E}_{v, J} = \tilde{\omega}(v+1/2)+\tilde{B}J(J+1)
 \]</div>
 <ul class="simple">
 <li><p>Since at room temperatures molecules mostly occupy vibrational ground state we are interested in rotational transitions taking place between ground (v=0) and the first excited (v=1) vibrational states.</p></li>
 <li><p>Rigid rotor model predicts different frequencies for absorption and emission transitions between any two rotational states <span class="math notranslate nohighlight">\(J\)</span> and <span class="math notranslate nohighlight">\(J'\)</span>.</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\tilde{\nu} = \frac{E_{1,J'} - E_{0,J}}{hc} \]</div>
+\[\tilde{\nu}_{\Delta J} = {\tilde{E}_{1,J'} - \tilde{E}_{0,J}} \]</div>
 <ul class="simple">
 <li><p><strong>The transitions with <span class="math notranslate nohighlight">\(\Delta J=+1\)</span> are called R branch</strong>:</p></li>
 </ul>
