deploy: e6d600b409de3113ee2ca52b1e4ecf937cdb6260

--- a/ch01/note01.html
+++ b/ch01/note01.html
@@ -467,7 +467,7 @@ document.write(`
 <p class="admonition-title">What you need to know</p>
 <ul class="simple">
 <li><p><strong>Quantum mechanics is the fundamental theory of nature</strong>, governing atoms, molecules, and subatomic particles.</p></li>
-<li><p>Quantum theories (quantum mechanics + quantum field theory) are <strong>complete descriptions of physical reality</strong>—and they’ve never failed an experimental test since their discovery.</p></li>
+<li><p>Quantum theories (quantum mechanics + quantum field theory) are <strong>complete descriptions of physical reality</strong>. And they’ve never failed an experimental test since their discovery!</p></li>
 <li><p>Predictions of quantum mechanics have been verified to an <strong>astonishing degree of accuracy</strong>.</p></li>
 </ul>
 </div>
