deploy: b7640061414a1e71a1745d0be79038eaadd2c2e4

--- a/ch01/note04.html
+++ b/ch01/note04.html
@@ -609,23 +609,31 @@ f_{\text{cf}} = \frac{m_e v^2}{r},
 \]</div>
 <hr class="docutils" />
 <p>The <strong>force-balance equation</strong> together with the <strong>quantized angular momentum condition</strong> restricts the allowed radii <span class="math notranslate nohighlight">\(r\)</span> of electron orbits. Solving step by step:</p>
-<ol class="arabic simple">
-<li><p>From angular momentum quantization:<br />
-$<span class="math notranslate nohighlight">\(
-m_e v r = n\hbar \quad \Rightarrow \quad v = \frac{n\hbar}{m_e r}.
-\)</span>$</p></li>
-<li><p>Substituting into the force-balance equation:<br />
-$<span class="math notranslate nohighlight">\(
-\frac{e^2}{4\pi\varepsilon_0 r^2} = \frac{m_e}{r} \left( \frac{n\hbar}{m_e r} \right)^2.
-\)</span>$</p></li>
-<li><p>Simplifying:<br />
-$<span class="math notranslate nohighlight">\(
-\frac{e^2}{4\pi\varepsilon_0} = \frac{(n\hbar)^2}{m_e r}.
-\)</span>$</p></li>
-<li><p>Solving for <span class="math notranslate nohighlight">\(r\)</span>:<br />
-$<span class="math notranslate nohighlight">\(
-r = \frac{4\pi \varepsilon_0 (n\hbar)^2}{m_e e^2} = n^2 a_0, \quad n = 1, 2, 3, \ldots
-\)</span>$</p></li>
+<ol class="arabic">
+<li><p>From angular momentum quantization:</p>
+<div class="math notranslate nohighlight">
+\[
+   m_e v r = n\hbar \quad \Rightarrow \quad v = \frac{n\hbar}{m_e r}.
+   \]</div>
+</li>
+<li><p>Substituting into the force-balance equation:</p>
+<div class="math notranslate nohighlight">
+\[
+   \frac{e^2}{4\pi\varepsilon_0 r^2} = \frac{m_e}{r} \left( \frac{n\hbar}{m_e r} \right)^2.
+   \]</div>
+</li>
+<li><p>Simplifying:</p>
+<div class="math notranslate nohighlight">
+\[
+   \frac{e^2}{4\pi\varepsilon_0} = \frac{(n\hbar)^2}{m_e r}.
+   \]</div>
+</li>
+<li><p>Solving for <span class="math notranslate nohighlight">\(r\)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
+   r = \frac{4\pi \varepsilon_0 (n\hbar)^2}{m_e e^2} = n^2 a_0, \quad n = 1, 2, 3, \ldots
+   \]</div>
+</li>
 </ol>
 <p>where the constant <span class="math notranslate nohighlight">\(z_0\)</span> is the <strong>Bohr radius</strong>, corresponding to the size of the ground-state orbit.</p>
 <div class="math notranslate nohighlight">
@@ -634,7 +642,8 @@ a_0 = \frac{4\pi \varepsilon_0 \hbar^2}{m_e e^2}
 \]</div>
 <div class="tip admonition">
 <p class="admonition-title"><strong>Bohr radius</strong>,</p>
-<p><span class="math notranslate nohighlight">\(a_0 \approx 0.529 \,\text{Å}\)</span></p>
+<div class="math notranslate nohighlight">
+\[a_0 \approx 0.529 \,\text{Å}\]</div>
 <ul class="simple">
 <li><p>We will encounter the Bohr radius many times. It sets the fundamental length scale for atomic physics.</p></li>
 </ul>
