deploy: 5857faa3a15b764a00aefdc10807c6d271cd49cb

--- a/ch02/note02.html
+++ b/ch02/note02.html
@@ -588,11 +588,20 @@ u = c_1 u_1+c_2u_2
 \[
 \frac{\partial^2 X(x)}{\partial x^2} - K X(x) = 0
 \]</div>
-<div class="tip dropdown admonition">
+<div class="tip admonition">
 <p class="admonition-title"><strong>Solving simple liner and homogenuous ODEs</strong></p>
+<p><strong>Going from ODE to algebraic equations</strong></p>
 <ul class="simple">
-<li><p>To solve linear and homogenuous ODEs we plug exponential and turn roblem from differential to algebraic one. In this case to a simple quadratic equation.</p></li>
+<li><p>To solve linear and homogenuous ODEs we plug exponential function, e.g <span class="math notranslate nohighlight">\(e^{kx}\)</span> and turn roblem from differential to algebraic one solving for parameter <span class="math notranslate nohighlight">\(k\)</span>. In our case of second order wave equation we will be dealing with simple quadratic equations.</p></li>
 </ul>
+<div class="math notranslate nohighlight">
+\[ax^2 + bx + c = 0,\]</div>
+<p>The solutions of which are given as:</p>
+<div class="math notranslate nohighlight">
+\[
+x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}.
+\]</div>
+<p><strong>Example ODE</strong></p>
 <div class="math notranslate nohighlight">
 \[
 \frac{d^2 y}{dx^2} +4=0
