deploy: 2a1166ebfb7d81fd89bd1effb58a22c625382cc2

--- a/ch03/note06.html
+++ b/ch03/note06.html
@@ -469,15 +469,11 @@ document.write(`
 <div class="admonition-what-you-need-to-know admonition">
 <p class="admonition-title"><strong>What you need to know</strong></p>
 <ul class="simple">
-<li><p>The <strong>time-dependent Schrödinger equation</strong> governs the evolution of quantum systems over time, linking energy and time through the Hamiltonian operator <span class="math notranslate nohighlight">\(\hat{H}\)</span>.</p></li>
-<li><p>A system’s state, represented by the wavefunction <span class="math notranslate nohighlight">\(\psi(x,t)\)</span>, evolves smoothly in time according to the equation:<br />
-<span class="math notranslate nohighlight">\(i\hbar \frac{\partial}{\partial t} \psi(x,t) = \hat{H}\psi(x,t).\)</span></p></li>
-<li><p><strong>Stationary states</strong> are solutions where the wavefunction takes the form of a product of a spatial part and a time-dependent phase factor:<br />
-<span class="math notranslate nohighlight">\(\psi(x,t) = \psi(x) e^{-i E t / \hbar}\)</span><br />
-These states have definite energy and their probability distributions are <strong>time-independent</strong>.</p></li>
-<li><p>In more general situations, the wavefunction can be expressed as a <strong>linear superposition of energy eigenstates</strong>, with time evolution given by the phase factors of the eigenstates:<br />
-<span class="math notranslate nohighlight">\(\psi(x,t) = \sum_n c_n \psi_n(x) e^{-i E_n t / \hbar}\)</span>
-This superposition leads to <strong>time-dependent probabilities</strong> as different eigenstates interfere.</p></li>
+<li><p>The <strong>time-dependent Schrödinger equation</strong> governs the evolution of quantum wave function over time <span class="math notranslate nohighlight">\(\psi(x,t)\)</span>.</p></li>
+<li><p><strong>Stationary states</strong> are eigenfunctions of hamiltonian <span class="math notranslate nohighlight">\(\hat{H}\)</span> containing a spatial part and a time-dependent phase factor:  <span class="math notranslate nohighlight">\(\psi(x,t) = \psi(x) e^{-i E t / \hbar}\)</span></p></li>
+<li><p>The stationary states have definite energy and their probability distributions are <strong>time-independent</strong>.</p></li>
+<li><p>In more general situations, the wavefunction can be expressed as a <strong>linear superposition of energy eigenstates</strong>, with time evolution given by the phase factors of the eigenstates:  <span class="math notranslate nohighlight">\(\psi(x,t) = \sum_n c_n \psi_n(x) e^{-i E_n t / \hbar}\)</span></p></li>
+<li><p>This superposition leads to <strong>time-dependent probabilities</strong> as different eigenstates interfere.</p></li>
 <li><p>The time-dependence of quantum states is key to understanding <strong>quantum dynamics</strong>, such as oscillations between states in <strong>two-level systems</strong> or time evolution of <strong>quantum superpositions</strong>.</p></li>
 </ul>
 </div>
