deploy: 76fd3942b0b09e50bce5e1163718bdb5fcaba5e3

--- a/ch04/note04.html
+++ b/ch04/note04.html
@@ -641,18 +641,19 @@ E_\text{rot} = \tfrac{1}{2} I \omega^2.
 <p>Thus, when <strong>no external force</strong> acts on a system,</p>
 <div class="math notranslate nohighlight">
 \[
-  \sum \vec{F}*\text{ext} = 0 ;\Rightarrow; \frac{d\vec{p}}{dt} = 0,
+  \sum \vec{F}\cdot \text{ext} = 0 ;\Rightarrow; \frac{d\vec{p}}{dt} = 0,
 \]</div>
 <p>meaning <strong>linear momentum is conserved</strong>.</p>
 <ul>
-<li><p><strong>Angular momentum</strong> is defined as ( \vec{L} = \vec{r} \times \vec{p} ).</p>
-<p>Taking the time derivative gives
-$<span class="math notranslate nohighlight">\(
-\frac{d\vec{L}}{dt} = \vec{r} \times \frac{d\vec{p}}{dt} = \sum \vec{\tau}*\text{ext}.
-\)</span>$
-Therefore, when <strong>no external torque</strong> acts on the system,</p>
+<li><p><strong>Angular momentum</strong> is defined as <span class="math notranslate nohighlight">\(\vec{L} = \vec{r} \times \vec{p}\)</span>.</p>
+<p>Taking the time derivative gives</p>
+<div class="math notranslate nohighlight">
+\[
+  \frac{d\vec{L}}{dt} = \vec{r} \times \frac{d\vec{p}}{dt} = \sum \vec{\tau}*\text{ext}.
+  \]</div>
 </li>
 </ul>
+<p>Therefore, when <strong>no external torque</strong> acts on the system,</p>
 <div class="math notranslate nohighlight">
 \[
   \sum \vec{\tau}*\text{ext} = 0 ;\Rightarrow; \frac{d\vec{L}}{dt} = 0,
