--- a/ch06/lin_var.html
+++ b/ch06/lin_var.html
@@ -656,7 +656,11 @@ Solving the eigenvalue problem <span class="math notranslate nohighlight">\(\mat
 <p>and</p>
 <div class="math notranslate nohighlight">
 \[S_{ij} = \langle f_i|f_j\rangle \]</div>
-<p>We have obtaind all matrix elements in previous sectio. The <span class="math notranslate nohighlight">\(\mathbf{S}\)</span> is</p>
+<ul class="simple">
+<li><p>We have obtaind all matrix elements in previous section and are now ready to obtain eigenvalues</p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[\begin{split}\mathbf{H} = \frac{\hbar^2a^3}{m} \begin{bmatrix} \frac{1}{6} &amp; \frac{a^2}{30}\\ \frac{a^2}{30} &amp; \frac{a^4}{105} \end{bmatrix}\end{split}\]</div>
 <div class="math notranslate nohighlight">
 \[\begin{split}\mathbf{S} = \frac{a^5}{10} \begin{bmatrix} \frac{1}{3} &amp; \frac{a^2}{14}\\ \frac{a^2}{14} &amp; \frac{a^4}{63} \end{bmatrix}\end{split}\]</div>
 <div class="cell tag_hide-input docutils container">
